--- a/css/error404.css
+++ b/css/error404.css
@@ -13,7 +13,8 @@ body {
 }
 
 .error-main {
-  height: 100vh;
+  height: auto;
+  margin-bottom: 30vh;
   text-align: center;
   display: flex;
   align-items: center;
@@ -29,6 +30,7 @@ section > h4 {
   margin-top: 11rem;
   font-size: 2.5rem;
   font-weight: bold;
+  color: #000;
 }
 
 .main-search-container {
