--- a/css/main.css
+++ b/css/main.css
@@ -14,15 +14,7 @@ body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
     Helvetica, "Lucida Grande", sans-serif;
   font-weight: 400;
-}
-
-header {
-  position: absolute;
-  display: inline-block;
-  height: 10vh;
-  right: 10px;
-  top: 20px;
-  font-size: 1rem;
+  overflow: hidden;
 }
 
 main {
@@ -32,9 +24,11 @@ main {
   justify-content: center;
   align-items: center;
   padding: 0;
+  overflow: hidden;
 }
 
 p {
+  font-family: "Lucida Console", "Courier New", monospace;
   text-align: center;
   width: 1300px;
   font-size: 7rem;
@@ -42,6 +36,7 @@ p {
   white-space: nowrap;
   margin: 0 auto;
   animation: typing 3.5s steps(30, end), blink-caret 0.5s step-end infinite;
+  overflow: hidden;
 }
 
 @keyframes typing {
