weeeee img carousel

--- a/css/footer.css
+++ b/css/footer.css
@@ -12,6 +12,7 @@ body {
   font-weight: 400;
 }
 
+
 footer {
   background-color: black;
   color: white;
@@ -28,4 +29,6 @@ footer {
 
 .social li {
   display: inline;
+  padding: 0.5em;
 }
+
