--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
   body {
     height: auto;
     width: 100vw;
-    overflow-x: hidden;
+    overflow-x: hidden!important;
   }
   
   main {
@@ -182,7 +182,7 @@
   /* Banner Carousel */
   .carousel {
     width: 100%;
-    margin-bottom: 7rem;
+    /*margin-bottom: 7rem;*/
   }
   
   .carousel .slides {
@@ -385,12 +385,20 @@
     .card .text-container .category-container span {
       font-size: 13px;
     }
+
+    .col-md-6 .hugeText {
+      font-size: 3em;
+      padding-left: 0.1em;
+      padding-right: 0.1em;
+    }
+    
   }
+
   
   .descriptionBar {
     display: flex;
     justify-content: space-between;
-    padding-top: 1.2rem!important;
+    padding-top: 2.5rem!important;
   }
   
   #recentProducts {
@@ -453,3 +461,5 @@
   .col-md-6 {
     margin-right: 0% !important;
   }
+
+  
