--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -1,9 +1,11 @@
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 0em;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background-color: transparent!important;
+
 }
 
 ::-webkit-scrollbar-thumb {
@@ -15,4 +17,10 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #a8bbbf;
+}
+
+@media screen and (max-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 0em;
+  }
 }
