--- a/css/admin_login.css
+++ b/css/admin_login.css
@@ -14,6 +14,18 @@ body {
   width: 100vw;
 }
 
+.admin-login-card {
+  width: 35rem;
+  position: absolute;
+  transition: all 0.5s;
+}
+
+.admin-login-card.hide {
+  z-index: -1;
+  opacity: 0;
+  transform: translateY(20%) rotateY(90deg);
+}
+
 .admin-form-container .error-container {
   display: flex;
   align-items: center;
