--- a/css/admin_login.css
+++ b/css/admin_login.css
@@ -44,3 +44,13 @@ body {
 .admin-form-container a:hover {
   text-decoration: underline;
 }
+
+.register-card {
+  margin-top: 3rem;
+}
+
+@media (max-width: 768px) {
+  .register-card {
+    margin-top: 5rem;
+  }
+}
