--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,11 @@
     height: auto;
     width: 100vw;
     overflow-x: hidden!important;
+    overflow-y: auto;
+    scrollbar-gutter: stable;
+    
   }
+
   
   main {
     overflow-x: hidden;
@@ -308,93 +312,7 @@
   .carousel .right-arrow i {
     margin-right: 40px;
   }
-  
-  @media screen and (max-width: 768px) {
-    .banner-text-top {
-      font-size: 1.5em;
-    }
-  
-    .banner-text-main {
-      font-size: 3em;
-    }
-  
-    .banner-text-bottom {
-      font-size: 0.7em;
-    }
-  
-    .main-container .grid-container {
-      padding: 24px !important;
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      height: 18rem;
-    }
-  
-    .main-container .grid-container .card {
-      position: absolute;
-      display: flex;
-      flex-direction: row;
-      height: 15rem;
-      width: 80%;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-    }
-  
-    .main-container .grid-container2 {
-      padding: 24px !important;
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      height: 18rem;
-    }
-  
-    .main-container .grid-container2 .card {
-      position: absolute;
-      display: flex;
-      flex-direction: row;
-      height: 15rem;
-      width: 80%;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-    }
-  
-    .card .arrow {
-      display: flex;
-      align-items: center;
-    }
-  
-    .card .arrow i {
-      cursor: pointer;
-      pointer-events: all;
-    }
-  
-    .card img {
-      width: 50%;
-      border-radius: var(--img-border-radius) 0 0 var(--img-border-radius);
-    }
-  
-    .card .text-container {
-      display: flex;
-    }
-  
-    .card .text-container .category-container {
-      margin: 0;
-      margin-bottom: auto;
-    }
-  
-    .card .text-container .category-container span {
-      font-size: 13px;
-    }
 
-    .col-md-6 .hugeText {
-      font-size: 3em;
-      padding-left: 0.1em;
-      padding-right: 0.1em;
-    }
-    
-  }
-
-  
   .descriptionBar {
     display: flex;
     justify-content: space-between;
@@ -462,4 +380,206 @@
     margin-right: 0% !important;
   }
 
+  
+  
+  @media screen and (max-width: 768px) {
+    .banner-text-top {
+      font-size: 1.5em;
+    }
+  
+    .banner-text-main {
+      font-size: 3em;
+    }
+  
+    .banner-text-bottom {
+      font-size: 0.7em;
+    }
+  
+    .main-container .grid-container {
+      padding: 15px !important;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: 18rem;
+    }
+  
+    .main-container .grid-container .card {
+      position: absolute;
+      display: flex;
+      flex-direction: row;
+      height: 12.5rem;
+      width: 95%;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+      background-color: #e6e6e6!important;
+    }
+  
+    .main-container .grid-container2 {
+      padding: 15px !important;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: 18rem;
+    }
+  
+    .main-container .grid-container2 .card {
+      position: absolute;
+      display: flex;
+      flex-direction: row;
+      height: 12.5rem;
+      width: 95%;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+      background-color: #e6e6e6!important;
+    }
+  
+    .card .arrow-previous {
+      padding-left: 10px;
+      padding-right: 0px;
+    }
+
+    .card .arrow-next {
+      padding-right: 10px;
+      padding-left: 0px;
+    }
+
+    .card .arrow {
+      display: flex;
+      align-items: center;
+    }
+  
+    .card .arrow i {
+      cursor: pointer;
+      pointer-events: all;
+    }
+  
+    .card img {
+      width: 45%;
+      height: 90%;
+      border-radius: 0!important;
+      padding: 20px;
+      padding-left: 10px;
+      padding-right: 0px;
+      padding-top: 30px;
+      /**border-radius: var(--img-border-radius) 0 0 var(--img-border-radius);**/
+    }
+  
+    .card .text-container {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 4rem;
+      padding-right: 15px;
+    }
+  
+    .card .text-container .category-container {
+      margin: 0;
+      margin-bottom: 0rem!important;
+    }
+
+  
+    .card .text-container .category-container span {
+      font-size: 15px!important;
+    }
+
+    #recentProducts {
+      height: 15rem;
+    }
+
+    .descriptionBar {
+      padding-top: 1rem!important;
+    }
+
+    .sectionHeader {
+      margin-left: 1rem;
+      margin-right: 1rem;
+    }
+
+    .col-md-6 .hugeText {
+      font-size: 3em;
+      padding-left: 0.1em;
+      padding-right: 0.1em;
+    }
+    
+   /** #banner1 {
+      background-image: url("/images/index/christianvui.jpeg");
+      background-position: center;
+    }
+    #banner2 {
+      background-image: url("/images/index/timdessaint.jpeg")!important;
+      background-position: center;
+    }
+    #banner3 {
+      background-image: url("/images/index/christianvui.jpeg")!important;
+      background-position: center;
+    } **/
+    #banner1 {
+      height: 15em;
+      background-position: center;
+      margin-top: 3em;
+    }
+    #banner2 {
+      height: 15em;
+      background-position: center;
+      margin-top: 3em;
+    }
+    #banner3 {
+      height: 15em;
+      background-position: center;
+      margin-top: 3em;
+    }
+
+    .carousel .radio-btns label {
+      border: 3px solid #eee;
+      border-radius: 100%;
+      width: 10px!important;
+      height: 10px!important;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .carousel .radio-btns {
+      width: 60px;
+    }
+
+    .hugeText {
+      font-weight: 700;
+      font-size: 5em;
+      padding-right: 2%!important;
+    }
+
+    #displayJumbo {
+      padding-left: 2%!important;
+      padding-right: 10%;
+      height: 39rem!important;
+    }
+
+    #swTitle {
+      padding-bottom: 5%!important;
+    }
+
+    .lookbookDesc {
+      padding-left: 2%!important;
+    }
+
+    #inspoPics img {
+      height: 18rem!important;
+      padding-left: 11%!important;
+    }
+
+    #inspoPics {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    body::-webkit-scrollbar {
+      display: none!important; /* for Chrome, Safari, and Opera */
+    }
+    
+
+
+
+  }
+
+  
   
