--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -20,7 +20,12 @@
 }
 
 @media screen and (max-width: 768px) {
-  ::-webkit-scrollbar {
-    width: 0em;
+  scrollbar-hidden::-webkit-scrollbar {
+    display: none!important;
+    overflow-y: hidden!important;
   }
+  body::-webkit-scrollbar {
+    display: none!important; /* for Chrome, Safari, and Opera */
+  }
+  
 }
