--- a/css/pages.css
+++ b/css/pages.css
@@ -22,3 +22,102 @@
 .paraText {
   padding-right: 10%;
 }
+
+  /* Grid */
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .main-container .grid-container {
+    width: 100%;
+    --card-height: 1fr;
+    --side-padding: 3rem;
+    padding: 1rem var(--side-padding) 0 var(--side-padding);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(18%, 0.7fr));
+    /* grid-template-rows: var(--card-height) var(--card-height) var(--card-height); */
+    gap: 2rem;
+  }
+  
+  .main-container .grid-container .card {
+    --img-border-radius: 1rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding: 0;
+    background-color: #eee;
+    border-radius: var(--img-border-radius);
+    cursor: pointer;
+    opacity: 1;
+  }
+  
+  .main-container .grid-container2 {
+    width: 100%;
+    --card-height: 1fr;
+    --side-padding: 3rem;
+    padding: 1rem var(--side-padding) 0 var(--side-padding);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(18%, 0.7fr));
+    /* grid-template-rows: var(--card-height) var(--card-height) var(--card-height); */
+    gap: 2rem;
+    padding-bottom: 10rem;
+  }
+  
+  .main-container .grid-container2 .card {
+    --img-border-radius: 1rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding: 0;
+    background-color: #eee;
+    border-radius: var(--img-border-radius);
+    cursor: pointer;
+    opacity: 1;
+  }
+  
+  .card .arrow {
+    pointer-events: none;
+    display: none;
+  }
+  
+  .card img {
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    border-radius: var(--img-border-radius) var(--img-border-radius) 0 0;
+  }
+  
+  .card .category-container {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+    opacity: 0.5;
+  }
+  
+  .card .text-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 1rem 1rem;
+  }
+  
+  .card .text-container span:nth-of-type(1) {
+    font-size: 1.5rem;
+  }
+  
+  .card .text-container span:nth-of-type(2) {
+    margin: 0;
+    font-size: 1.7rem;
+    font-weight: bold;
+  }
+  
