--- a/css/pages.css
+++ b/css/pages.css
@@ -56,32 +56,6 @@
     opacity: 1;
   }
   
-  .main-container .grid-container2 {
-    width: 100%;
-    --card-height: 1fr;
-    --side-padding: 3rem;
-    padding: 1rem var(--side-padding) 0 var(--side-padding);
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(18%, 0.7fr));
-    /* grid-template-rows: var(--card-height) var(--card-height) var(--card-height); */
-    gap: 2rem;
-    padding-bottom: 10rem;
-  }
-  
-  .main-container .grid-container2 .card {
-    --img-border-radius: 1rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    padding: 0;
-    background-color: #eee;
-    border-radius: var(--img-border-radius);
-    cursor: pointer;
-    opacity: 1;
-  }
-  
   .card .arrow {
     pointer-events: none;
     display: none;
@@ -121,3 +95,16 @@
     font-weight: bold;
   }
   
+  .category-container span {
+    margin: 0;
+    font-size: 1rem !important;
+    font-weight: bold;
+  }
+
+  .text-container span {
+    font-size: 1.2rem !important;
+  }
+
+  .category-container {
+    margin-top: 0rem !important;
+  }
