--- a/css/pages.css
+++ b/css/pages.css
@@ -62,8 +62,8 @@
   }
   
   .card img {
-    height: 100%;
-    width: 100%;
+    height: 5em;
+    width: 5em;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
