--- a/css/pages.css
+++ b/css/pages.css
@@ -29,6 +29,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-bottom: 2rem;
   }
   
   .main-container .grid-container {
