--- a/css/pages.css
+++ b/css/pages.css
@@ -47,7 +47,7 @@
   .main-container .grid-container .card {
     --img-border-radius: 1rem;
     width: 100%;
-    height: 100%;
+    height: 10rem;
     display: flex;
     flex-direction: column;
     justify-content: left;
