--- a/css/pages.css
+++ b/css/pages.css
@@ -64,7 +64,7 @@
   }
   
   .card img {
-    height: 75%;
+    height: 17rem;
     width: 100%;
     background-repeat: no-repeat;
     background-size: contain;
