--- a/css/pages.css
+++ b/css/pages.css
@@ -46,8 +46,8 @@
   
   .main-container .grid-container .card {
     --img-border-radius: 1rem;
-    width: 100%;
-    height: 25rem;
+    width: 25rem;
+    height: 30rem;
     display: flex;
     flex-direction: column;
     justify-content: left;
@@ -64,7 +64,7 @@
   }
   
   .card img {
-    height: 17rem;
+    height: 25rem;
     width: 100%;
     background-repeat: no-repeat;
     background-size: contain;
