--- a/css/pages.css
+++ b/css/pages.css
@@ -46,8 +46,8 @@
   
   .main-container .grid-container .card {
     --img-border-radius: 1rem;
-    width: 25rem;
-    height: 30rem;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: left;
