--- a/css/pages.css
+++ b/css/pages.css
@@ -46,7 +46,7 @@
   
   .main-container .grid-container .card {
     --img-border-radius: 1rem;
-    width: 75%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -64,7 +64,7 @@
   }
   
   .card img {
-    height: 25rem;
+    height: 75%;
     width: 100%;
     background-repeat: no-repeat;
     background-size: contain;
