--- a/css/pages.css
+++ b/css/pages.css
@@ -64,8 +64,8 @@
   }
   
   .card img {
-    height: 75%;
-    width: 100%;
+    height: 20rem;
+    width: 20rem;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
