--- a/css/pages.css
+++ b/css/pages.css
@@ -46,8 +46,8 @@
   
   .main-container .grid-container .card {
     --img-border-radius: 1rem;
-    width: 100%;
-    height: 23rem;
+    width: 17em;
+    height: 23em;
     display: flex;
     flex-direction: column;
     justify-content: left;
