object fit cover

--- a/css/pages.css
+++ b/css/pages.css
@@ -70,6 +70,9 @@
     background-size: contain;
     background-position: center;
     border-radius: var(--img-border-radius) var(--img-border-radius) 0 0;
+  }
+
+  .imageDIV {
     object-fit: cover;
   }
   
