--- a/css/pages.css
+++ b/css/pages.css
@@ -56,6 +56,8 @@
     border-radius: var(--img-border-radius);
     cursor: pointer;
     opacity: 1;
+    padding-left: 1em;
+    padding-right: 1em;
   }
   
   .card .arrow {
