--- a/css/shopping_bag.css
+++ b/css/shopping_bag.css
@@ -13,8 +13,37 @@ body {
   overflow-x: hidden;
 }
 
+#displayJumbo {
+  background-color: black;
+  padding-top: 5%;
+  padding-left: 10%;
+  padding-right: 8%;
+  padding-bottom: 10%;
+  position: relative;
+  z-index: 0;
+  height: 25rem;
+}
+
+#description {
+  color: white;
+}
+
+.hugeText {
+  font-weight: 700;
+  font-size: 5em;
+  padding-right: 10%;
+}
+
+.paraText {
+  padding-right: 10%;
+}
+
+.fluid-container .mb-4 .h-100 .w-100 .cart-container {
+  padding-top: 0%;
+  margin-top: 0%;
+}
+
 .cart-container {
-  margin-top: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
