fixed duplicate IDs

--- a/css/index.css
+++ b/css/index.css
@@ -321,7 +321,7 @@ input[type="radio"] {
   margin-bottom: 7rem;
 }
 
-#viewAll {
+section .descriptionBar .viewAll {
   text-decoration: none !important;
 }
 
