--- a/css/login.css
+++ b/css/login.css
@@ -173,4 +173,8 @@ button.submit-button {
     padding: 1.5rem 0;
     margin: 0;
   }
+  form {
+    display: flex;
+    flex-direction: column;
+  }
 }
