--- a/css/shopping_bag.css
+++ b/css/shopping_bag.css
@@ -47,6 +47,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 5rem;
 }
 
 .cart-container .title-text {
@@ -58,6 +59,7 @@ body {
   color: #000;
 }
 
+
 .cart-container .title-text h1 {
   font-weight: bold;
 }
@@ -67,32 +69,38 @@ body {
 }
 
 .cart-container .items {
-  width: 60%;
-  margin-top: 5rem;
+  width: 100%;
+  /**margin-top: 5rem;**/
   display: flex;
   flex-direction: column;
+  padding-left: 5vw;
 }
 
 .cart-container .items .item {
   height: 30rem;
   width: 100%;
   padding: 5rem 0;
-  border-top: 1px solid #aaa;
+  padding-top: 0rem;
+  /**border-top: 1px solid #aaa; **/
   display: flex;
   flex-direction: row;
 }
 
-.cart-container .items .item img {
-  height: 100%;
-  width: 40%;
-  object-fit: contain;
+.cart-container .items .imageDiv {
+  height: 20vw;
+  width: 20vw;
+}
+
+ .cart-container .items .item img {
+  width: auto;
+  object-fit: fill!important;
 }
 
 .cart-container .items .item .item-details {
-  width: 60%;
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  /**justify-content: space-between;**/
   align-items: center;
   font-size: 2rem;
 }
@@ -109,7 +117,7 @@ body {
 .cart-container .price-container {
   padding: 1rem 0;
   width: 60%;
-  border-top: 1px solid #aaa;
+ /**border-top: 1px solid #aaa;**/
   display: flex;
   justify-content: right;
 }
