--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,17 @@ main {
   opacity: 0.5;
 }
 
+.card .icons {
+  width: 100%;
+  margin-top: 1rem;
+  padding: 0 1rem;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: #000;
+}
+
 .card .text-container {
   display: flex;
   flex-direction: column;
