--- a/css/forgot.css
+++ b/css/forgot.css
@@ -1,9 +1,10 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : 25 Nov, 2022, 2:29:09 AM
-    Author     : spookyjos
-*/
+.ms-xl-4 {
+    margin-left: 8rem!important;
+}
 
+.login-img-overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: rgba(50, 50, 50, 0.5);
+  }
