--- a/css/admin.css
+++ b/css/admin.css
@@ -14,6 +14,10 @@ body {
   height: 100vh;
 }
 
+.mobile-overlay {
+  display: none;
+}
+
 .msg-container {
   display: flex;
   align-items: center;
@@ -60,4 +64,25 @@ select option {
   opacity: 0;
   transform: translateY(-50%);
   z-index: -10;
+}
+
+@media screen and (max-width: 768px) {
+  main {
+    min-height: 30vh;
+  }
+  .mobile-overlay {
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    text-align: center;
+  }
+  .mobile-overlay p {
+    font-size: 2rem;
+    font-weight: 600;
+  }
+  .everytElse {
+    display: none;
+  }
+
 }
