--- a/css/account.css
+++ b/css/account.css
@@ -1,3 +1,11 @@
+.text-content h1 {
+    padding: 7px 300px; 
+    font-weight: bold;
+}
+.text-content h5 {
+    padding: 7px 300px;
+}
+
 .formTitle {
     padding-left: 25em!important;
     padding-right: 25em!important;
@@ -25,4 +33,15 @@
     padding-bottom: 0.6rem!important;
     padding-left: 0.5rem!important;
 
+}
+
+@media screen and (max-width: 768px) {
+    .text-content h1 {
+        padding-left: 15%!important;
+        padding-right: 15%!important;
+    }
+    .text-content h5 {
+        padding-left: 15%;
+        padding-right: 15%;
+    }
 }
