--- a/css/account.css
+++ b/css/account.css
@@ -1,47 +1,43 @@
 .text-content h1 {
-    padding: 7px 300px; 
+    padding: 60px 300px;
+    padding-bottom: 10px; 
     font-weight: bold;
+    color: black;
 }
 .text-content h5 {
     padding: 7px 300px;
 }
 
-.formTitle {
-    padding-left: 25em!important;
-    padding-right: 25em!important;
-    padding-top: 4em!important;
-}
-
-.formTitle h1 {
-    font-weight: 700;
-    color: black;
-}
-
-.changeDetails {
-    padding-left: 25em!important;
-    padding-right: 25em!important;
-    padding-bottom: 3em!important;
-}
-
-
-.form-group {
-    padding: 0.2em!important;
-}
-
-.form-check {
-    padding-top: 0.9rem!important;
-    padding-bottom: 0.6rem!important;
-    padding-left: 0.5rem!important;
-
-}
 
 @media screen and (max-width: 768px) {
     .text-content h1 {
+        padding-top: 17%!important;
         padding-left: 15%!important;
         padding-right: 15%!important;
+        padding-bottom: 1%!important;
     }
     .text-content h5 {
         padding-left: 15%;
         padding-right: 15%;
+    }
+    .editDetailsForm form {
+        display: flex;
+        flex-direction: column;
+    }
+    form {
+        margin-left: 0%!important;
+        margin-right:0%!important;
+        width: 100%!important;
+    }
+    .editDetailsForm form .form-group {
+        padding-left: 15%!important;
+        padding-right: 15%!important;
+    }
+    .editDetailsForm form .form-group2 {
+        padding-left: 15%!important;
+        padding-right: 15%!important;
+    }
+    .editDetailsForm form .form-group2 btn {
+        padding-bottom: 20px;
     }
 }
